--- a/resources/main.css
+++ b/resources/main.css
@@ -3,6 +3,7 @@
     font-family: sans-serif;
     font-weight: bold;
     margin: 0px;
+    transition: all 0.2s linear;
 }
 
 .textCenter{
@@ -43,7 +44,8 @@ section.plaque{
     border-left: 25px solid transparent;
     border-right: 25px solid transparent;
     border-image: url(img/scroll.png) 120 30 stretch;
-    margin: auto 200px;
+    margin: auto 0px;
+    max-width: 60%;
     position:relative;
     z-index:1;
 }
@@ -60,5 +62,18 @@ section.plaque::before{
 h1{
     font-size:100px;
     text-align:center;
+    text-shadow: 1px 1px 5px #960000;
+}
+
+img.dragon{
+    height: 100px;
+    margin: auto 0px;
+    width: 60px;
+}
+
+img.dragon:hover{
+    height: 120px;
+    margin: auto 0px;
+    width: 72px;
 }
 
