practice feature implemented, basic animations

--- a/partials/box-model.html
+++ b/partials/box-model.html
@@ -1,3 +1,26 @@
 <div>
-    <h1>Box Model</h1>
+    <h2>Box Model</h2>
+    <div class="flex-container flex-horizontal">
+        <section class="lesson padded">
+            <div class="boxModel shadow limes">
+                <p>Box Shadow</p>
+                <div class="boxModel outline">
+                    <p>Outline</p>
+                    <div class="boxModel margin">
+                        <p>Margin</p>
+                        <div class="boxModel border">
+                            <p>Border</p>
+                            <div class="boxModel padding">
+                                <p>Padding</p>
+                                <div class="boxModel content">
+                                    <p>Content</p>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <toy class="practice padded textCenter"></toy>
+    </div>
 </div>
