complex css practice tool created

--- a/partials/measure.html
+++ b/partials/measure.html
@@ -1,3 +1,42 @@
 <div>
-    <h1>Units of Measure</h1>
+    <h2>Units of Measure</h2>
+    <div class="flex-container flex-horizontal">
+        <section class="lesson padded">
+            <table class="limes">
+                <tr>
+                    <th>Unit</th>
+                    <th>Meaning</th>
+                </tr>
+                <tr>
+                    <td>px</td>
+                    <td>1/96 of an inch. Absolute value.</td>
+                </tr>
+                <tr>
+                    <td>%</td>
+                    <td>Of the parent element. Relative value.</td>
+                </tr>
+                <tr>
+                    <td>vh</td>
+                    <td>1% of the screen height. Relative value.</td>
+                </tr>
+                <tr>
+                    <td>vw</td>
+                    <td>1% of the screen width. Relative value.</td>
+                </tr>
+                <tr>
+                    <td>em</td>
+                    <td>The font size of the current element.</td>
+                </tr>
+                <tr>
+                    <td>vmin</td>
+                    <td>1% of the viewport's smaller dimension.</td>
+                </tr>
+                <tr>
+                    <td>vmax</td>
+                    <td>1% of the viewport's larger dimension.</td>
+                </tr>
+            </table>
+        </section>
+        <toy class="practice padded textCenter"></toy>
+    </div>
 </div>
