--- a/partials/selectors.html
+++ b/partials/selectors.html
@@ -1,3 +1,30 @@
 <div>
-    <h1>Selectors and Pseudo-Classes</h1>
+    <h2>Selectors</h2>
+    <div class="flex-container flex-horizontal">
+        <section class="lesson padded">
+            <table class="limes">
+                <tr>
+                    <th>Selector</th>
+                    <th>Meaning</th>
+                </tr>
+                <tr>
+                    <td>:active</td>
+                    <td>Applied to links which have been clicked.</td>
+                </tr>
+                <tr>
+                    <td>:hover</td>
+                    <td>Applied when the mouse hovers over the selected element.</td>
+                </tr>
+                <tr>
+                    <td>:focus</td>
+                    <td>Applied when the element gains focus.</td>
+                </tr>
+                <tr>
+                    <td>:visited</td>
+                    <td>Applied to links which have been visited.</td>
+                </tr>
+            </table>
+        </section>
+        <complex-css class="practice padded textCenter"></complex-css>
+    </div>
 </div>
