fix background issue, halted animations

--- a/partials/complex-css.html
+++ b/partials/complex-css.html
@@ -9,6 +9,11 @@
             <th>Age</th>
         </tr>
         <tr>
+            <td>Roy</td>
+            <td>Horev</td>
+            <td>32</td>
+        </tr>
+        <tr>
             <td>Aviram</td>
             <td>Becker</td>
             <td>30</td>
