--- a/partials/multi-classes.html
+++ b/partials/multi-classes.html
@@ -1,3 +1,20 @@
 <div>
-    <h1>Multiple Classes</h1>
+    <h2>Multiple Classes</h2>
+    <div class="flex-container flex-horizontal">
+        <section class="lesson padded">
+            <label>Name:</label>
+                <input type="text" />
+            <label class="wide">Family name:</label>
+                <input type="text" />
+            <label class="wide">Phone Number:</label>
+                <input type="text" />
+            <label>Email:</label>
+                <input type="email" />
+            <label class="date">Date:</label>
+                <input class="tiny no-margin" type="number" placeholder="DD" />
+                <input class="tiny no-margin" type="number" placeholder="MM" />
+                <input class="tiny no-margin" type="number" placeholder="YYYY" />
+        </section>
+        <complex-css class="practice padded textCenter"></complex-css>
+    </div>
 </div>
