--- a/partials/pseudo-classes.html
+++ b/partials/pseudo-classes.html
@@ -9,11 +9,11 @@
                 </tr>
                 <tr>
                     <td>::before</td>
-                    <td>added BEFORE the specified element.</td>
+                    <td>added BEFORE the specified element. requires the "content:'value';" attribute.</td>
                 </tr>
                 <tr>
                     <td>::after</td>
-                    <td>added AFTER the specified element.</td>
+                    <td>added AFTER the specified element. requires the "content:'value';" attribute.</td>
                 </tr>
                 <tr>
                     <td>::first-letter</td>
