--- a/partials/selectors.html
+++ b/partials/selectors.html
@@ -9,7 +9,7 @@
                 </tr>
                 <tr>
                     <td>:active</td>
-                    <td>Applied to links which have been clicked.</td>
+                    <td>Applied to elements for as long as they are clicked.</td>
                 </tr>
                 <tr>
                     <td>:hover</td>
