--- a/partials/selectors2.html
+++ b/partials/selectors2.html
@@ -8,20 +8,20 @@
                     <th>Meaning</th>
                 </tr>
                 <tr>
-                    <td>:active</td>
-                    <td>Applied to elements for as long as they are clicked.</td>
+                    <td>A + B</td>
+                    <td>Applied to elements of type B immediately after element of type A</td>
                 </tr>
                 <tr>
-                    <td>:hover</td>
-                    <td>Applied when the mouse hovers over the selected element.</td>
+                    <td>A ~ B</td>
+                    <td>Applied to elements of type B which are siblings element of type A</td>
                 </tr>
                 <tr>
-                    <td>:focus</td>
-                    <td>Applied when the element gains focus.</td>
+                    <td>A   B</td>
+                    <td>Applied to elements of type B which are descendents  of type A</td>
                 </tr>
                 <tr>
-                    <td>:visited</td>
-                    <td>Applied to links which have been visited.</td>
+                    <td>A > B</td>
+                    <td>Applied to elements of type B which are immediate children of type A</td>
                 </tr>
             </table>
         </section>
