added flex component

--- a/partials/flex.html
+++ b/partials/flex.html
@@ -1,3 +1,48 @@
 <div>
-    <h1>Flex Display</h1>
+    <h2>Flex Display</h2>
+    <div class="flex-container flex-horizontal">
+        <section class="lesson padded">
+            <table class="limes">
+                <tr>
+                    <th>Property</th>
+                    <th>Meaning</th>
+                </tr>
+                <tr>
+                    <td>flex-direction</td>
+                    <td>Specifies the direction in which flex elements are laid out.</td>
+                </tr>
+                <tr>
+                    <td>flex-wrap</td>
+                    <td>Defines the way flex items behave when wrapping is needed.</td>
+                </tr>
+                <tr>
+                    <td>justify-content</td>
+                    <td>Handles the alignment of flex items along the main axis.</td>
+                </tr>
+                <tr>
+                    <td>align-items</td>
+                    <td>Handles the alignment of flex items along the cross-axis</td>
+                </tr>
+            </table>
+            <table class="limes">
+                <tr>
+                    <th>Property</th>
+                    <th>Meaning</th>
+                </tr>
+                <tr>
+                    <td>order</td>
+                    <td>A number which states the order in which the items are laid out.</td>
+                </tr>
+                <tr>
+                    <td>flex-grow</td>
+                    <td>A proportion by which to modify the item's size.</td>
+                </tr>
+                <tr>
+                    <td>align-self</td>
+                    <td>Custom alignment for a flex item, to override align-items of the flex-container.</td>
+                </tr>
+            </table>
+        </section>
+        <flex class="practice padded textCenter"></flex>
+    </div>
 </div>
