--- a/partials/ng-class.html
+++ b/partials/ng-class.html
@@ -1,3 +1,7 @@
 <div>
-    <h1>Angular and CSS</h1>
+    <h2>Angular and CSS</h2>
+    <div class="flex-container flex-horizontal">
+        <toy class="practice padded textCenter"></toy>
+        <complex-css class="practice padded textCenter"></complex-css>
+    </div>
 </div>
