--- a/partials/pseudo-classes.html
+++ b/partials/pseudo-classes.html
@@ -16,6 +16,10 @@
                     <td>added AFTER the specified element. requires the "content:'value';" attribute.</td>
                 </tr>
                 <tr>
+                    <td>::selection</td>
+                    <td>targets the selected text of the element.</td>
+                </tr>
+                <tr>
                     <td>::first-letter</td>
                     <td>targets the first letter of the element value.</td>
                 </tr>
