--- a/partials/selectors3.html
+++ b/partials/selectors3.html
@@ -8,11 +8,11 @@
                     <th>Meaning</th>
                 </tr>
                 <tr>
-                    <td>element[attribute]</td>
+                    <td>[attribute]</td>
                     <td>Applied to elements which have the specified attribute.</td>
                 </tr>
                 <tr>
-                    <td>element[attribute='value']</td>
+                    <td>[attribute='value']</td>
                     <td>Applied to elements when the specified attribute matches the provided value.</td>
                 </tr>
                 <tr>
@@ -32,7 +32,7 @@
                     <td>Selects inputs which are valid.</td>
                 </tr>
                 <tr>
-                    <td>:checked</td>
+                    <td>input:checked</td>
                     <td>Selects checkboxes which are checked.</td>
                 </tr>
             </table>
