finished all content screens. workaround for bug in chrome with resizing element

--- a/partials/cross-browser.html
+++ b/partials/cross-browser.html
@@ -1,3 +1,10 @@
 <div>
-    <h1>Cross Browser Compatibility</h1>
+    <h2>Cross Browser Compatibility</h2>
+    <ol>
+        <li>Different browsers have different implementations for rendering content.</li>
+        <li>While most are compliant to standards, small differences still persist.</li>
+        <li>Avoid using static units unless necessary.</li>
+        <li>Fluency in using the box model helps avoid errors.</li>
+        <li>Make sure the properties and selectors are supported by legacy browsers.</li>
+    </ol>
 </div>
