--- a/partials/good-practices.html
+++ b/partials/good-practices.html
@@ -1,3 +1,11 @@
 <div>
-    <h1>Good Practices</h1>
+    <h2>Good Practices</h2>
+    <ol>
+        <li>Sort properties alphabetically.</li>
+        <li>Group classes and selectors under the same element.</li>
+        <li>Avoid inline styles.</li>
+        <li>Markup is an inherent part of CSS.</li>
+        <li>Stick to dynamic sizes.</li>
+        <li>Use shorthand properties when possible.</li>
+    </ol>
 </div>
