--- a/partials/selectors3.html
+++ b/partials/selectors3.html
@@ -1,5 +1,5 @@
 <div>
-    <h2>Selectors</h2>
+    <h2>More Selectors</h2>
     <div class="flex-container flex-horizontal">
         <section class="lesson padded">
             <table class="limes">
