--- a/resources/main.css
+++ b/resources/main.css
@@ -88,6 +88,11 @@ h1, h2, h3, h4, h5, h6{
     text-shadow: 1px 1px 5px #960000;
 }
 
+ol li{
+    font-size: 30px;
+    margin: 15px;
+}
+
 input, select{
     height: 25px;
     margin: 5px;
@@ -129,6 +134,7 @@ img.dragon:hover{
     background-color: white;
     border: dotted 2px black;
     display: inline-block;
+    height: 25vh;
     margin:auto;
     min-height:20px;
     min-width:20px;
@@ -136,6 +142,12 @@ img.dragon:hover{
     max-height:35vh;
     overflow: auto;
     resize: both;
+    width: 100%;
+}
+
+.toy:active {
+  height: 20px;
+  width: 20px;
 }
 
 textarea.input{
@@ -183,6 +195,7 @@ textarea.input{
 .limes{
     border-radius: 15px;
     border: solid 5px black;
+    margin-bottom: 10px;
 }
 
 .padded{
