small bug fixes

--- a/partials/specificity.html
+++ b/partials/specificity.html
@@ -20,10 +20,10 @@
                 <span class="wide">.Class, :pseudo, [attribute]</span>
                 <span>Element</span>
             <div class="specificity">
-                <span><input class="specificity" type="number" placeholder="DD" /></span>
-                <span><input class="specificity" type="number" placeholder="DD" /></span>
-                <span class="wide"><input class="specificity" type="number" placeholder="DD" /></span>
-                <span><input class="specificity" type="number" placeholder="DD" /></span>
+                <span><input class="specificity" type="number" /></span>
+                <span><input class="specificity" type="number" /></span>
+                <span class="wide"><input class="specificity" type="number" /></span>
+                <span><input class="specificity" type="number" /></span>
             </div>
         </section>
         <complex-css class="practice padded textCenter"></complex-css>
